# ecossistema-capacitacao-grp

./: .env  .env.example  .gitignore  ATUALIZACAO_CATALOGO.md  Dockerfile  INSTRUCOES.md  README.md  diretrizes-deploy-azure-ecossistema-capacitacao-grp.md  diretrizes-gerais-ecossistema-capacitacao-grp.md  local.db  poc-ecossistema-capacitacao-grp.txt  pyproject.toml  requirements.txt  temp_out.html
.github/workflows/: deploy.yml
app/: __init__.py
app/catalog/: __init__.py  excel_repository.py  models.py  repository.py  service.py
app/db/: models.py
app/routes/: ui.py
app/search/: __init__.py  azure_client.py  azure_embeddings.py  azure_models.py  azure_openai_client.py  azure_text_search.py  local_provider.py  provider.py
app/services/: catalog_service.py  search_mock.py  search_provider.py  storage_service.py
app/templates/: 1_repo_linear.html  2_tree_accordion.html  6_ai_semantic_trad.html  8_rag_trad.html  base.html  index.html
data/docs/: POP_101__empenho-inclusao-ordinario.docx  POP_102__empenho-inclusao-global.docx  POP_103__empenho-inclusao-estimativa.docx  POP_105__empenho-reforco.docx  POP_106__empenho-anulacao-total.docx  POP_107__empenho-anulacao-parcial.docx  POP_109__empenho-consulta-saldo.docx  POP_110__empenho-historico.docx  POP_201__liq-material-consumo.docx  POP_202__liq-material-permanente.docx  POP_203__liq-servicos.docx  POP_205__liq-folha.docx  POP_206__liq-estorno-total.docx  POP_207__liq-estorno-parcial.docx  POP_209__liq-adiantamento.docx  POP_210__liq-consulta-notas.docx  POP_301__pag-ob-fornecedor.docx  POP_302__pag-pd.docx  POP_304__pag-retencoes-federais.docx  POP_305__pag-retencoes-iss.docx  POP_306__pag-cancelamento-ob.docx  POP_407__cont-dve.docx  (+10 more)
migrations/: env.py
scripts/: check_hybrid_search.py  check_openai_chat.py  check_openai_embeddings.py  check_openai_token.py  generate_mock.py  import_data.py
tests/: conftest.py  test_routes.py  test_search.py
(+2 files in other folders)
