[project]
name = "ecossistema-capacitacao-grp"
version = "0.1.0"
description = "Ecossistema Digital de Capacitação GRP (MVP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=22.0.0",
    "werkzeug>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.29",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.1.1",
    "ruff>=0.15.5",
    "types-openpyxl>=3.1.5.20250919",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
# Change to your Python version
python_version = "3.13"
mypy_path = "typings"
strict = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "C90", "B", "C4", "UP", "RUF", "SIM", "PIE", "PERF", "FURB", "FLY",
    "S", "BLE", "EM", "RSE", "TRY", "ANN", "FA", "TCH", "PYI", "ARG", "FBT", "RET", "SLF",
    "TID", "ICN", "INP", "LOG", "G", "A", "ISC", "DTZ", "ASYNC", "PT", "PTH", "PL", "T10",
    "T20", "ERA", "PGH", "YTT", "SLOT", "EXE"
]

ignore = [
    "ISC001", "ANN401", "PLR0913", "PLR2004", "EM101", "EM102", "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", "ARG001", "ARG002", "PLR2004", "SLF001", "S603", "S607", "PLC0415", "ASYNC221"
]
"__init__.py" = [
    "F401"
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-returns = 8
max-statements = 64

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

